DMP-2941 Update Security Group endpoints to hide system users (#1431)